# AckermannRobot-2D-ROS2

./: .gitignore  README.md
docs/superpowers/plans/: 2026-07-20-ackermann-steering-limit-alignment.md  2026-07-20-neupan-ackermann-command-conversion.md  2026-07-20-waypoint-mission.md
docs/superpowers/specs/: 2026-07-20-ackermann-steering-limit-alignment-design.md  2026-07-20-neupan-ackermann-command-conversion-design.md  2026-07-20-troubleshooting-documentation-design.md  2026-07-20-waypoint-mission-design.md
scripts/: nav_amcl_dwb.sh  nav_amcl_neupan.sh  nav_carto_dwb.sh  nav_carto_neupan.sh  nav_carto_neupan_filtered.sh  run_neupan.sh  save_map.sh
src/ackermann_robot/: CMakeLists.txt  package.xml
src/ackermann_robot/config/: ackermann_controllers.yaml  ekf_config.yaml  view_robot.rviz
src/ackermann_robot/launch/: gazebo.launch.py  keyboard_control.launch.py  map.launch.py  review.launch.py
src/ackermann_robot/maps/: room4.yaml
src/ackermann_robot/rviz/: nav2_default_view.rviz  slam_config.rviz
src/ackermann_robot/scripts/: arrow_key_control.py  cmd_vel_mux.py  cmd_vel_stamper.py
src/ackermann_robot/test/: test_steering_geometry.py
src/ackermann_robot/worlds/: mini.world  room4.world
src/ackermann_robot/xacro/: chassis.xacro  control.xacro  sensors.xacro
src/gazebo_worlds/: CMakeLists.txt  README.md  package.xml
src/gazebo_worlds/maps/: empty_room.yaml
src/gazebo_worlds/worlds/: mobile_robot_world.world  office_world.world  world_dynamic.world
src/gazebo_worlds/worlds/experiment_rooms/room1/map/: room1.yaml
src/gazebo_worlds/worlds/experiment_rooms/room2/map/: room2.yaml
src/hybrid_astar_planner/: CMakeLists.txt  package.xml
src/hybrid_astar_planner/core/: node_se2.hpp  types.hpp
src/hybrid_astar_planner/rviz/: planner.rviz
src/hybrid_astar_planner/standalone_planner/config/: planner_params.yaml
src/hybrid_astar_planner/standalone_planner/include/hybrid_astar_planner/: pgm_map_adapter.hpp
src/hybrid_astar_planner/standalone_planner/launch/: hybrid_astar_planner.launch.py
src/hybrid_astar_planner/standalone_planner/src/: planner_node.cpp
src/maps/: my_map.pbstream  my_map.pgm  my_map.yaml  my_new_map.pbstream  my_new_map.pgm  my_new_map.yaml
src/neupan_ros2/: .flake8  .pep257  .pylintrc  README.md  README_cn.md  package.xml  setup.cfg  setup.py
src/neupan_ros2/config/robots/: README.md
src/neupan_ros2/config/robots/_template/: README.md  planner.yaml.template  robot.yaml.template
src/neupan_ros2/config/robots/_template/models/: README.md
src/neupan_ros2/config/robots/ackermann_robot/: planner.yaml  robot.yaml
src/neupan_ros2/config/robots/ackermann_robot/models/: dune_model_5000.pth
src/neupan_ros2/config/robots/big_vehicle/: planner.yaml  robot.yaml
src/neupan_ros2/config/robots/big_vehicle/models/: dune_model_5000.pth
src/neupan_ros2/config/robots/ranger/: planner.yaml  robot.yaml
src/neupan_ros2/config/robots/ranger/models/: dune_model_5000.pth
src/neupan_ros2/config/robots/scout/: planner.yaml  robot.yaml
src/neupan_ros2/config/robots/scout/models/: dune_model_5000.pth
src/neupan_ros2/config/robots/simulation/: planner.yaml  robot.yaml
src/neupan_ros2/launch/: big_vehicle_navigation.launch.py  infrastructure.launch.py  limo.launch.py  ranger.launch.py  scout.launch.py  sim_complete.launch.py  simulation.launch.py
src/neupan_ros2/neupan_ros2/: neupan_node.py  utils.py  visualization_manager.py
src/neupan_ros2/rviz/: neupan.rviz  neupan_big_vehicle.rviz  neupan_sim.rviz
src/neupan_ros2/test/: test_arrival_reporter.py  test_command_conversion.py  test_pep257.py
src/neupan_ros2/train/: train_config.yaml  train_dune.py
src/robot_slam/: CMakeLists.txt  package.xml
src/robot_slam/config/: assets_writer_ros_map.lua  my_robot_cartographer_2d.lua  my_robot_cartographer_2d_localization.lua  nav2_params.yaml  nav2_params_neupan.yaml  scan_filter_params.yaml  sim_config.yaml
src/robot_slam/launch/: navigation.launch.py  navigation_carto.launch.py  navigation_cartographer.launch.py  navigation_dwb.launch.py  navigation_neupan.launch.py  neupan.launch.py  slam.launch.py
src/scan_filter/: CMakeLists.txt  package.xml
src/scan_filter/src/: scan_filter_node.cpp
src/waypoint_mission/: package.xml  setup.cfg  setup.py
src/waypoint_mission/test/: test_integration_files.py  test_model.py  test_node_contract.py  test_ros_utils.py
src/waypoint_mission/waypoint_mission/: __init__.py  model.py  ros_utils.py  waypoint_mission_node.py
