<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesxsd="http://www.w3.org/2001/XMLSchema-instance"?>
<package format="3">
  <name>gazebo_worlds</name>
  <version>0.0.1</version>
  <description>Gazebo world files and maps for Ackermann robot</description>
  <maintainer email="young@todo.todo">young</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
