<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hybrid_astar_planner</name>
  <version>0.1.0</version>
  <description>
    Hybrid A* global path planner adapted from Nav2 smac_planner.
    Standalone ROS2 node wrapping the refactored nav2_smac_planner algorithm.
    Provides GetPlan service and publishes Path for RViz2 visualization.
  </description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- System dependencies (not ROS packages) -->
  <build_depend>ompl</build_depend>
  <build_depend>libeigen3-dev</build_depend>
  <build_depend>libceres-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
