<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelayout="1.0"?>
<package format="3">
  <name>robot_slam</name>
  <version>0.0.1</version>
  <description>Cartographer-based SLAM for Ackermann robot with single-line 360° LiDAR</description>
  <maintainer email="zoe@todo.todo">zoe</maintainer>
  <license>TODO: License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ackermann_robot</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
