<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scan_filter</name>
  <version>0.1.0</version>
  <description>
    Bayesian dynamic obstacle filter for 2D LaserScan.
    Inspired by the Bayesian static/dynamic probability estimation approach
    used in incremental 3D mapping systems. Adapted for 2D beam-wise
    scan comparison to remove moving obstacles before Cartographer localization.
  </description>
  <maintainer email="young@example.com">Young</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
